# Mechdonalds-Project-Assignment-

./: CMakeLists.txt  README.md  settings.json
src/app/: account.cpp  account.h  app.cpp  app.h  burger.cpp  burger.h  combo.cpp  combo.h  command.cpp  command.h  drink.cpp  drink.h  item.cpp  item.h  launcher.cpp  message.cpp  message.h
test/: CMakeLists.txt  tester.cpp
